# cognitiv-coding-challenges

dna/: CMakeLists.txt  README.md  README2.md  base.hpp  person.hpp  sequence_buffer.hpp
dna/test/: CMakeLists.txt  fake_person.hpp  fake_stream.cpp  fake_stream.hpp  fake_stream_test.cpp  person_test.cpp  sequence_buffer_test.cpp
